proyecto2/jaeger1.16-python-flask-envoy-k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
#    kubernetes.io/ingress.class: gloo
#    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: contour
  name: jaeger-public
  namespace: proyecto
spec:
  rules:
    - host: jaeger.pablomedrano.engineer
      http:
        paths:
          - backend:
              serviceName: simplest-query
              servicePort: 16686
            path: /.*
